v4/runnerDeployment.yaml
# apiVersion: extensions/v1beta1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-child-app-1
  labels:
    app: my-child-app-1
    node: my-child-app-1
    pattern: wso2sp-pattern-distributed
spec:
  selector:  # required by the apps/v1 apiVersion
    matchLabels:
      app: my-child-app-1
      node: my-child-app-1
      pattern: wso2sp-pattern-distributed

  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: my-child-app-1
        node: my-child-app-1
        pattern: wso2sp-pattern-distributed
    spec:
      containers:
      -
        # image: senthuran16/siddhi-runner:1.0
        image: senthuran16/wso2sp-worker:4.3.0
        name: siddhi-runner
        imagePullPolicy: Always
        command: ['sh', '-c', sleep 40 && /home/wso2carbon/init.sh]
        ports:
          -
            containerPort: 9090
            protocol: "TCP"
          -
            containerPort: 9443
            protocol: "TCP"
          -
            containerPort: 9543
            protocol: "TCP"
          -
            containerPort: 9544
            protocol: "TCP"
          -
            containerPort: 9711
            protocol: "TCP"
          -
            containerPort: 9611
            protocol: "TCP"
          -
            containerPort: 7711
            protocol: "TCP"
          -
            containerPort: 7611
            protocol: "TCP"
          -
            containerPort: 7070
            protocol: "TCP"
          -
            containerPort: 7443
            protocol: "TCP"


        livenessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 300
          periodSeconds: 20
