v4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: siddhi-runner-ingress
  labels:
    pattern: wso2sp-pattern-distributed
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
    - siddhi-runner
  rules:
  - host: siddhi-runner
    http:
      paths:
      - path: /
        backend:
          serviceName: siddhi-runner
          servicePort: 9090
